testing/macro-tests/tests/ui/pk_fields_composite_internal_source.stderr
error: composite primary keys are external-only; remove source = "internal" or use source = "external"
  --> tests/ui/pk_fields_composite_internal_source.rs:17:1
   |
17 | / #[entity(
18 | |     store = "UiDataStore",
19 | |     pk(fields = ["tenant_id", "local_id"], source = "internal"),
20 | |     fields(
...  |
24 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `entity` (in Nightly builds, run with -Z macro-backtrace for more info)
